# tlog-viewer

./: .gitignore  CMakeLists.txt  README.md
qml/: MainPage.qml  MapView.qml  RawDataView.qml  TimelineControl.qml  WelcomePage.qml  main.qml
src/: AppController.cpp  AppController.h  MavlinkMessage.h  MessageListModel.cpp  MessageListModel.h  TlogParser.cpp  TlogParser.h  main.cpp
tests/: CMakeLists.txt  tst_appcontroller.cpp  tst_messagelistmodel.cpp  tst_tlogparser.cpp
tests/helpers/: TlogBuilder.h
